--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
 
             </div>
-            <img class="img2" src="image/burger-1-removebg-preview.png" alt="">
+            <img class="img2" src="image/noodle-hero1.png" alt="">
 
         </div>
 
@@ -111,7 +111,7 @@
                 <center><button class="sub_btn">Order Now</button></center>
             </div>
             <div class="banner_img3  sub_banner_img">
-                <img src="image/noodles-card8.avif" alt="" width="100%">
+                <img src="image/noodles-hero2.webp" alt="" width="100%">
                 <p class="banner_p">Lorem ipsum dolor sit amet consectetur, adipisicing elit.
 
                     Mollitia accusantium cupiditate voluptatem beatae, in nostrum?</p>
